corrected grammer, added downloadable doc, target:_blank links

--- a/diycamperconversion.html
+++ b/diycamperconversion.html
@@ -88,8 +88,7 @@
                             <p class="snippet-card-text">Getting a self converted van on the road in Ireland can be
                                 suprisingly
                                 tricky. Here I have a handy step by step guide on how to get your home on wheels
-                                inspected,
-                                registered, insured, and ready for the open road.</p>
+                                registered, taxed, insured, and ready for the open road.</p>
                             <a href="get-your-van-road-ready.html" class="btn btn-snippet">Check it out</a>
                         </div>
                     </div>
