--- a/get-your-van-road-ready.html
+++ b/get-your-van-road-ready.html
@@ -77,7 +77,7 @@
         <!-- Blog Post -->
         <article class="container bp-container">
             <div class="blog-post">
-                <h1 class="bp-title">5 Steps To Get Your Van Road Ready</h1>
+                <h1 class="bp-title">5 Steps To Get Your Van On The Road</h1>
                 <p>Before getting started on your conversion, it’s best to know how to get it legally on
                     the road. When
                     you
@@ -87,7 +87,7 @@
                     what needs to be done, and in what order.
                     <br><br>
                     The first thing to know is that to get your camper insured, it first must be registered as a motor
-                    caravan on the logbook. In the eyes of the Revenue, for a self-converted van to be considered a
+                    caravan on the logbook. In the eyes of Revenue, for a self-converted van to be considered a
                     motor
                     caravan, it must have the following: </p>
                 <ul>
@@ -96,7 +96,7 @@
                     <li>Cooking facilities</li>
                     <li>Storage facilities</li>
                 </ul>
-                <p>When it comes to cooking facilities and gas, the Revenue state that a Gas
+                <p>When it comes to cooking facilities and gas, Revenue state that a Gas
                     Installer Certificate should be made available. In my experience, this is not the case. That said,
                     when
                     installing gas, it is recommended that you use a registered gas installer. Having your gas installed
@@ -120,7 +120,7 @@
                     The
                     reason is,
                     in
-                    Ireland, as mentioned above, there are only basic standardized requirements set out by the Revenue
+                    Ireland, as mentioned above, there are only basic standardized requirements set out by Revenue
                     to
                     convert a commercial vehicle into a camper. Most insurance providers have additional requirements
                     relating to different areas of your build, particularly gas installation. It’s a good idea to speak
@@ -128,16 +128,18 @@
                     the insurance provider before getting started, avoiding any nasty surprises when it comes time to
                     get
                     the van insured. In Ireland, you have three options, <a class="bodylink"
-                        href="https://www.dolmen-insurance.ie/">Dolmen Insurances</a>, <a class="bodylink"
-                        href="https://www.campervaninsurance.ie/">Stuart Insurances</a>, and the
-                    <a class="bodylink" href="http://motorcaravanclub.com/">Motor Caravan Club of Ireland</a>.</p>
+                        href="https://www.dolmen-insurance.ie/" target="_blank">Dolmen Insurances</a>, <a
+                        class="bodylink" href="https://www.campervaninsurance.ie/" target="_blank">Stuart
+                        Insurances</a>, and the
+                    <a class="bodylink" href="http://motorcaravanclub.com/" target="_blank">Motor Caravan Club of
+                        Ireland</a>.</p>
                 <br><br>
                 <h2 class="bp-heading">Post Build</h2>
                 <hr class="hori">
                 <h3 class="bp-heading">Step 2: Get your van weighed.</h3>
                 <p>Before your van can be inspected by an SQI (step three), you will need to find a weighbridge in your
                     local area and have your van weighed. Your best bet is to try a local recycling centre. I used <a
-                        href="http://marrakeshltd.com/" class="bodylink"> Marrakesh
+                        href="http://marrakeshltd.com/" class="bodylink" target="_blank"> Marrakesh
                         Recycling Centre</a> in Kilmacanogue, Co. Wicklow, costing €20.
                 </p>
                 <br>
@@ -147,29 +149,30 @@
                     will be an automotive engineer. The SQI will inspect the vehicle, make sure the conversion is up to
                     spec
                     and provide the necessary declaration. The SQI will also take photos of the interior and exterior of
-                    your van. These will need to be submitted to the Revenue along with your declaration. The cost of
+                    your van. These will need to be submitted to Revenue along with your declaration. The cost of
                     the
                     inspection is in the ballpark of €200.
                     <br><br>
-                    I would highly recommend using Noel Maher from <a href="https://atecea.ie/"
-                        class="bodylink">ATECEA</a>.
+                    I would highly recommend using Noel Maher from <a href="https://atecea.ie/" class="bodylink"
+                        target="_blank">ATECEA</a>.
                     He is a great person to deal
                     with and has a wealth of knowledge and experience in certifying conversions.
                 </p>
                 <br>
-                <h3 class="bp-heading">Step 4: Submit your documents to the Revenue.</h3>
-                <p>Good news, we are almost there! It is time to submit all of your documents to the Revenue. This
+                <h3 class="bp-heading">Step 4: Submit your documents to Revenue.</h3>
+                <p>Good news, we are almost there! It is time to submit all of your documents to Revenue. These
                     includes:</p>
                 <ul>
                     <li>Vehicle Registration Certificate</li>
-                    <li>SQI - Declaration of conversion</li>
+                    <li>SQI - Declaration of Conversion</li>
                     <li>Copy of the weigh docket</li>
                     <li>Conversion photographs</li>
                     <li>Cover letter and conversion receipts</li>
                 </ul>
                 <p>Your cover letter should briefly outline how you went about your conversion and the associated cost.
                     I
-                    have created a cover letter template that you can download <a href="#" class="bodylink">here</a>.
+                    have created a cover letter template that you can download <a href="camper-reg-cover-template.docx"
+                        class="bodylink" target="_blank">here</a>.
                     <br><br>
                     All of your documents should be posted to:
                     <br><br>
@@ -182,18 +185,21 @@
                 </p>
                 <br>
                 <h3 class="bp-heading">An important note...</h3>
-                <p>Based on your application, the Revenue will determine the open market value of your newly converted
+                <p>Based on your application, Revenue will determine the open market value of your newly converted
                     camper. You will then be subject to VRT on that value of 13.3%. This will need to be paid before
                     your
                     camper can be officially registered and insured.</p>
                 <br>
                 <h3 class="bp-heading">Step 5: Insuring your van.</h3>
                 <p>Your DIY conversion is officially a camper! You can now go about insuring. As mentioned earlier, you
-                    have three options, <a class="bodylink" href="https://www.dolmen-insurance.ie/">Dolmen
-                        Insurances</a>, <a class="bodylink" href="https://www.campervaninsurance.ie/">Stuart
+                    have three options, <a class="bodylink" href="https://www.dolmen-insurance.ie/"
+                        target="_blank">Dolmen
+                        Insurances</a>, <a class="bodylink" href="https://www.campervaninsurance.ie/"
+                        target="_blank">Stuart
                         Insurances</a>,
                     and the
-                    <a class="bodylink" href="http://motorcaravanclub.com/">Motor Caravan Club of Ireland</a>. Each
+                    <a class="bodylink" href="http://motorcaravanclub.com/" target="_blank">Motor Caravan Club of
+                        Ireland</a>. Each
                     insurer
                     has different terms and conditions; I would recommend
                     taking a look at each and deciding on a provider that suits your needs best.
