--- a/index.html
+++ b/index.html
@@ -106,11 +106,10 @@
                     <img src="assets/images/van-snow.jpg" class="card-img-top"
                         alt="Van parked in a snow covered forest car park in Enniskerry, Co. Dublin">
                     <div class="card-body">
-                        <h5 class="card-title">5 Steps To Get Your Van Road Ready</h5>
+                        <h5 class="card-title">5 Steps To Get Your Van On The Road</h5>
                         <p class="card-text">Getting a self converted van on the road in Ireland can be suprisingly
-                            tricky. Here I have a handy step by step guide on how to get your home on wheels
-                            inspected,
-                            registered, insured, and ready for the open road.</p>
+                            tricky. Here I have a handy step by step guide on how to get your home on wheels registered,
+                            taxed, insured, and ready for the open road.</p>
                         <a href="get-your-van-road-ready.html" class="btn btn-general">Check it out</a>
                     </div>
                 </div>
@@ -139,7 +138,8 @@
                         alt="Van parked at night at Fanore beach in county Clare">
                     <div class="card-body">
                         <h5 class="card-title">Coming Soon</h5>
-                        <p class="card-text">I will have some great Vanlife content up soon, subscribe below to get
+                        <p class="card-text">Articles with tips and advice on full-time vanlife in Ireland will feature
+                            here soon, subscribe below to get
                             notified!</p>
                         <a href="vanlifeireland.html" class="btn btn-general">Check it out</a>
                     </div>
